apps/kaneo/ingress-kaneo-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaneo-tailscale
  namespace: kaneo
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kaneo-kaneo
      port:
        number: 5173
  tls:
    - hosts:
        - kaneo
